--- a/Pipfile
+++ b/Pipfile
@@ -17,6 +17,7 @@ dash_bootstrap_components = "==1.5.0"
 dash_leaflet = "==1.0.11"
 fit-tool = "==0.9.13"
 pandas = "==2.2.2"
+python-dotenv = "==1.0.1"
 
 [dev-packages]
 flake8 = "==7.0.0"
